# octty

./: .gitignore  CPU.26407775165.762919.cpuprofile  Cargo.toml  LICENSE  PLAN.md  README.md  RENDER_PLAN.md  electrobun.config.ts  package-lock.json  package.json  run-release.sh  tsconfig.json  vitest.config.ts
config/: shell-types.json
crates/octty-app/: Cargo.toml
crates/octty-app/src/: actions.rs  app_activity.rs  app_core.rs  app_live_terminals.rs  app_panes.rs  app_render.rs  app_workspace_status.rs  bootstrap.rs  cli.rs  codex_sessions.rs  desktop_notifications.rs  gpui_tokio.rs  input.rs  lib.rs  main.rs  menu.rs  metrics.rs  shell_config.rs  sidebar.rs  taskspace.rs  terminal_lifecycle.rs  terminal_render_grid.rs  terminal_render_paint.rs  terminal_render_profile.rs  terminal_render_types.rs  terminal_selection.rs  terminal_state.rs  tests.rs  workspace.rs  workspace_watch.rs
crates/octty-core/: Cargo.toml
crates/octty-core/src/: layout.rs  lib.rs  shortcuts.rs  types.rs
crates/octty-jj/: Cargo.toml
crates/octty-jj/src/: lib.rs
crates/octty-store/: Cargo.toml
crates/octty-store/src/: codecs.rs  connection.rs  lib.rs  migrations.rs  pane_activity.rs  paths.rs  project_roots.rs  sessions.rs  snapshots.rs  tests.rs  workspaces.rs
crates/octty-term/: Cargo.toml
crates/octty-term/src/: ghostty_vt.rs  lib.rs  live.rs  live_input.rs  live_notifications.rs  live_runtime.rs  live_snapshot.rs  live_spawn.rs  live_tests.rs  live_trace.rs  live_types.rs  live_utils.rs  retach.rs  tmux.rs
crates/retach-octty/: Cargo.toml  LICENSE  README.md
crates/retach-octty/docs/plans/: 2026-03-06-terminal-traits-design.md  2026-03-06-terminal-traits-impl.md  2026-03-07-quality-refactor-design.md  2026-03-07-quality-refactor-plan.md
crates/retach-octty/src/: cli.rs  lib.rs  main.rs  pty.rs  session.rs
crates/retach-octty/src/client/: mod.rs  raw_mode.rs  server_launcher.rs
crates/retach-octty/src/protocol/: codec.rs  messages.rs  mod.rs  tests_history_protocol.rs
crates/retach-octty/src/screen/: cell.rs  grid.rs  grid_mutator.rs  history_boundary_tests.rs  mod.rs  performer.rs  render.rs  style.rs  tests_large_updates.rs  tests_live_scrollback.rs  tests_progress_bar_scrollback.rs  tests_reattach.rs  tests_reconnect_scrollback.rs  tests_resize.rs  tests_screen.rs  traits.rs
crates/retach-octty/src/server/: client_handler.rs  mod.rs  session_bridge.rs  session_relay.rs  session_setup.rs  socket.rs
crates/retach-octty/tests/: library_api.rs  pty_output.rs
docs/: architecture.md  design.md  terminal-performance.md  terminal-render-plan.md
scripts/: build-electron.mjs  electron-builder-before-build.cjs
squashfs-root/: .DirIcon  AppRun  chrome-sandbox  octty.desktop
squashfs-root/locales/: am.pak  ar.pak  ca.pak  cs.pak  da.pak  es-419.pak  es.pak  et.pak  fa.pak  fr.pak  he.pak  hr.pak  id.pak  it.pak  ko.pak  lt.pak  lv.pak  ms.pak  nb.pak  nl.pak  pl.pak  pt-BR.pak  pt-PT.pak  ru.pak  sk.pak  sl.pak  sr.pak  sv.pak  sw.pak  tr.pak  uk.pak  vi.pak  zh-CN.pak  zh-TW.pak
squashfs-root/resources/: app-update.yml
squashfs-root/resources/runtime/pty-host/: output-batching.mjs
src/backend/: app-paths.test.ts  app-paths.ts  command.ts  db.test.ts  db.ts  embedded-sessions.test.ts  embedded-sessions.ts  env.test.ts  jj.test.ts  jj.ts  pty-sidecar.test.ts  pty-sidecar.ts  requirements.test.ts  requirements.ts  service.ts  shutdown.test.ts  shutdown.ts  terminal-config.test.ts  terminal-config.ts  terminal-launch-args.test.ts  terminal-restore.test.ts  terminal-restore.ts  workspace-watch.test.ts  workspace-watch.ts
src/bun/: command.ts  db.test.ts  db.ts  embedded-sessions.test.ts  embedded-sessions.ts  env.test.ts  env.ts  index.ts  jj.test.ts  jj.ts  pty-sidecar.test.ts  pty-sidecar.ts  service.ts  shutdown.test.ts  terminal-launch-args.test.ts  terminal-launch-args.ts  terminal-restore.test.ts  terminal-restore.ts  workspace-watch.test.ts  workspace-watch.ts
src/electron/: backend.ts  browser-manager.ts  index.html  main.ts  preload.ts  terminal-clipboard.ts
src/mainview/: custom-elements.d.ts  desktop-client.ts  index.css  index.html  index.tsx
src/pty-host/: index.mjs  output-batching.d.ts  output-batching.test.mjs
src/shared/: agent-attention.test.ts  agent-attention.ts  app-shortcuts.test.ts  app-shortcuts.ts  browser-utils.test.ts  browser-utils.ts  desktop-bridge.ts  diff-stats.test.ts  diff-stats.ts  layout.test.ts  layout.ts  terminal-batching.test.ts  terminal-batching.ts  terminal-clipboard.test.ts  terminal-clipboard.ts  terminal-font.test.ts  terminal-font.ts  terminal-kind.test.ts  terminal-kind.ts  terminal-shortcuts.test.ts  terminal-shortcuts.ts  terminal-transcript.ts  types.test.ts  types.ts  workspace-state.test.ts  workspace-state.ts
src/types/: octty-desktop.d.ts
