[workspace]
members = [
    "crates/octty-app",
    "crates/octty-core",
    "crates/octty-jj",
    "crates/octty-store",
    "crates/octty-term",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
gpui = "0.2.2"
gpui-component = "0.5.1"
octty-core = { path = "crates/octty-core" }
octty-jj = { path = "crates/octty-jj" }
octty-store = { path = "crates/octty-store" }
octty-term = { path = "crates/octty-term" }
portable-pty = "0.8.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "process", "rt-multi-thread", "time"] }
turso = { version = "0.6.0-pre.17", default-features = false }
