[workspace]
members = [
    "crates/octty-app",
    "crates/octty-core",
    "crates/octty-jj",
    "crates/octty-store",
    "crates/octty-term",
    "crates/retach-octty",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1.0.100"
bincode = "1.3.3"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
futures = "0.3.31"
gpui = "0.2.2"
gpui-component = "0.5.1"
octty-core = { path = "crates/octty-core" }
octty-jj = { path = "crates/octty-jj" }
octty-store = { path = "crates/octty-store" }
octty-term = { path = "crates/octty-term" }
portable-pty = "0.8.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "time"] }
turso = { version = "0.6.0-pre.17", default-features = false }
