[package]
name = "octty-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
octty-core.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
turso.workspace = true

[dev-dependencies]
tempfile.workspace = true
