[package]
name = "octty-term"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
ghostty-vt = ["dep:libghostty-vt"]

[dependencies]
bincode.workspace = true
octty-core.workspace = true
portable-pty.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
libghostty-vt = { git = "https://github.com/Uzaaft/libghostty-rs", rev = "f27655ad18a6ef04d7d9cec2779e57dab11b3405", package = "libghostty-vt", optional = true }
